--- a/prboom2/INSTALL
+++ b/prboom2/INSTALL
@@ -17,20 +17,20 @@ Basic Installation (ZIP, tarball, Git)
        apt-get install libsdl2-dev libsdl2-net-dev libsdl2-image-dev \
          libpcre3-dev libsdl2-mixer-dev libfluidsynth-dev \
          libportmidi-dev libmad0-dev libdumb1-dev libvorbis-dev
-         
+
     You will also need `cmake` and `make` if you haven't already got them.
-         
+
   2. `cd' to the directory containing the PrBoom distribution (the directory
      this file is in, prboom2).
-     
-     Create a new `build` folder and `cd` into it. 
+
+     Create a new `build` folder and `cd` into it.
      `mkdir build && cd build`
-     
-     Run `cmake .. -DCMAKE_BUILD_TYPE=Release` from this folder, or 
+
+     Run `cmake .. -DCMAKE_BUILD_TYPE=Release` from this folder, or
      `cmake .. -DCMAKE_BUILD_TYPE=Debug` for a debug build. (This gives
-     slightly lower performance, but more details in the event of 
+     slightly lower performance, but more details in the event of
      issues).
-     
+
      This should end with the message "Build files have been written to: [folderpath]".
 
   3. Type `make` to compile PrBoom. This may take some time; while it's
@@ -45,8 +45,8 @@ Basic Installation (ZIP, tarball, Git)
   4. Type `make install/strip' as root, to install the programs, data files
      and man pages for PrBoom. If you don't have root access on the machine,
      you should ask the syadmin to do this and the next step for you.
-     
-     If you want to install manually then you should put the `prboom-plus.wad` 
+
+     If you want to install manually then you should put the `dsda-doom.wad` 
      in /usr/local/share/games/doom/ (or symlink it from there).
 
   5. Copy your Doom, Doom 2, Ultimate Doom or Final Doom IWAD (doom.wad or
@@ -57,8 +57,8 @@ Basic Installation (ZIP, tarball, Git)
      If you have a system with many users, you should read the license for
      your version of Doom, and make sure only those users allowed to use it
      can access the IWAD file.
-     
-     You may also aquire FreeDoom from https://freedoom.github.io/ which is a 
+
+     You may also aquire FreeDoom from https://freedoom.github.io/ which is a
      free replacement to the iD Doom iWADs.
 
   6. You can remove the program binaries and object files from the
@@ -74,7 +74,7 @@ Basic Installation (ZIP, tarball, Git)
      you can just run prboom; otherwise give the full path.
 
 
-     
+
 Building an RPM
 ===============
 
